fix: long portraits in modern UI sheet are cut off: #2474
Long portraits should now be contained instead of being cut off

--- a/styles/modern/components/_header.scss
+++ b/styles/modern/components/_header.scss
@@ -27,7 +27,7 @@
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   .ms-hp-overlay {
